# battle-chess

./: .gitignore  package-lock.json  package.json  pyproject.toml  vite.config.ts
battle_chess/: connection_manager.py  dependencies.py  game_manager.py  main.py  type_defs.py
sec_2022_server/: connection_manager.py  game.py  main.py
src/: App.css  App.tsx  index.css  types.ts  utils.ts  utils.tsx
src/components/: Board.css  Board.tsx  Game.css  Game.tsx  MoveTimer.tsx  OpponentBoards.tsx  PieceQueue.tsx  PieceQueueCountdown.tsx  PlayerBoard.tsx  ReadyToggle.tsx
