[tool.poetry]
name = "sec-2022-server"
version = "0.1.0"
description = ""
authors = ["Jonathan Breidfjord <jbreidfjord@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
websockets = "^10.4"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
